# hackathon-methis-icp-web3

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/project-methis-health-backend/: Cargo.toml  project-methis-health-backend.did
src/project-methis-health-backend/src/: lib.rs
src/project-methis-health-frontend/: index.html  package-lock.json  package.json
src/project-methis-health-frontend/src/: App.jsx  main.jsx  use-auth-client.jsx
src/project-methis-health-frontend/src/components/: Chat.jsx  Register.jsx
