[package]
name = "project-methis-health-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" 
ic-cdk-macros = "0.13"
ic_principal = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_cbor = "0.11" 
ic-stable-structures = "0.1.1" # Adicione esta linha
uuid = { version = "1.0" } # Adicione esta linha